# gdinfo

./: AGENTS.md  Cargo.toml  README.md  claude.md
.github/workflows/: release.yml
src/: api.rs  icon_renderer.rs  main.rs  models.rs  storage.rs  ui.rs
