[package]
name = "gd_info"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
eframe = { version = "0.31", default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
